--- a/excersise/index.html
+++ b/excersise/index.html
@@ -6,7 +6,31 @@
 	<script type="text/javascript" src="flattenarray.js"></script>
 	<script type="text/javascript" src="searchByName.js"></script>
 	<script type="text/javascript" src="normalization.js"></script>
+	
 </head>
 <body>
+	<div id="myDiv">
+		
+	</div>
+
+	<script type="text/javascript">
+		var elem=document.getElementById('myDiv');
+		elem.style.height='100px';
+		elem.style.width='200px';
+		// elem.style.backgroundColor='red';
+		elem.innerHTML='MY DIV';
+
+		var cur=0;
+
+		var colors=['red','green','blue'];
+
+		function clickHandler(e){
+			var el=e.target;
+			el.style.backgroundColor=colors[cur];
+			cur=(cur+1)%3;
+		}
+
+		elem.addEventListener('click',clickHandler);
+	</script>
 </body>
 </html>
