--- a/excersise/index.html
+++ b/excersise/index.html
@@ -9,28 +9,142 @@
 	
 </head>
 <body>
-	<div id="myDiv">
+	<div id="container">
 		
 	</div>
 
 	<script type="text/javascript">
-		var elem=document.getElementById('myDiv');
-		elem.style.height='100px';
-		elem.style.width='200px';
-		// elem.style.backgroundColor='red';
-		elem.innerHTML='MY DIV';
+		// var elem=document.getElementById('myDiv');
+		// elem.style.height='100px';
+		// elem.style.width='200px';
+		// // elem.style.backgroundColor='red';
+		// elem.innerHTML='MY DIV';
 
-		var cur=0;
+		// var cur=0;
 
-		var colors=['red','green','blue'];
+		// var colors=['red','green','blue'];
 
-		function clickHandler(e){
-			var el=e.target;
-			el.style.backgroundColor=colors[cur];
-			cur=(cur+1)%3;
-		}
+		// function clickHandler(e){
+		// 	var el=e.target;
+		// 	el.style.backgroundColor=colors[cur];
+		// 	cur=(cur+1)%3;
+		// }
 
-		elem.addEventListener('click',clickHandler);
+		// elem.addEventListener('click',clickHandler);
+
+		var container=document.getElementById('container');
+		container.style.height='500px';
+		container.style.width='500px';
+		container.style.position='relative';
+		container.style.backgroundColor='yellow';
+		container.style.border='1px solid green';
+
+
+		// var boxes=new Array(5);
+		// for(var i=0;i<5;i++){
+		// 	boxes[i]=createBox();
+		// }
+		// console.log(boxes);
+		// for(var i=0;i<boxes.length;i++){
+		// 	var elem=document.createElement('div');
+		// 	elem.style.height=boxes[i].height+'px';
+		// 	elem.style.width=boxes[i].width+'px';
+		// 	elem.style.backgroundColor=boxes[i].color;
+		// 	elem.style.position='absolute';
+		// 	elem.style.top=boxes[i].y+'px';
+		// 	elem.style.left=boxes[i].x+'px';
+		// 	elem.style.borderRadius=boxes[i].radius+'px';
+		// 	container.appendChild(elem);
+		// }
+
+		// function createBox(){
+		// 	var x=parseInt(Math.random()*500);
+		// 	var y=parseInt(Math.random()*500);
+
+			// var box={
+			// 	x:x,
+			// 	y:y,
+			// 	height:10,
+			// 	width:10,
+			// 	color:'red',
+			// 	radius:50
+			// };
+			// return box;
+		// }
+
+		// function createBall(){
+
+		// 	var ball={
+		// 		height:10,
+		// 		width:10,
+		// 		color:'red',
+		// 		radius:50
+		// 	};
+		// 	return ball;
+		// }
+
+		// function drawBall(ball){
+		// 	var elem=document.createElement('div');
+		// 	elem.style.height=ball.height+'px';
+		// 	elem.style.width=ball.width+'px';
+		// 	elem.style.backgroundColor=ball.color;
+		// 	elem.style.position='absolute';
+		// 	elem.style.top='0px';
+		// 	elem.style.left='20px';
+		// 	elem.style.borderRadius=ball.radius+'px';
+		// 	container.appendChild(elem);
+
+		// 	return elem;	
+		// }
+
+		// function changePos(ballElement,topPos){
+		// 	ballElement.style.top=topPos+'px';
+		// }
+
+		// var ball=createBall();
+		// // var topPos=0;
+		// var ballElement=drawBall(ball);
+
+		// var speed=1;
+		// // console.log(ballElement.style.top);
+		// setInterval(function(){
+		// 	var topPos=parseInt(ballElement.style.top)+1*speed;
+			
+		// 	changePos(ballElement,topPos);
+			
+		// 	if(topPos+ball.height>=parseInt(container.style.height)){
+		// 		speed=-1;
+		// 	}
+		// 	if(topPos<=0){
+		// 		speed=1;
+		// 	}
+
+		// },10);
+		
+		// function Box(){
+		// 	this.x=parseInt(Math.random()*500);
+		// 	this.y=parseInt(Math.random()*500);
+		// 	this.elem=document.createElement('div');
+
+		// 	this.drawBox=function(parent){
+		// 		parent.appendChild(this.elem);
+		// 		this.elem.style.position='absolute';
+		// 		this.elem.style.top=y+'px';
+		// 		this.elem.style.left=x+'px';
+		// 		this.elem.style.height='10px';
+		// 		this.elem.style.width='10px';
+		// 		this.elem.style.backgroundColor='blue';
+		// 	};
+
+		// }
+		// var boxes=[]
+		// for(var i=0;i<10;i++){
+		// 	var b=new Box();
+		// 	b.drawBox(container);
+		// 	boxes.push(b);
+
+		// }
+
 	</script>
 </body>
 </html>
