--- a/ast1/index.html
+++ b/ast1/index.html
@@ -7,17 +7,18 @@
 			width: 250px;
 			height: 200px;
 			overflow: hidden;
-			position: relative;
+			/*position: relative;*/
 			border: 5px solid green;
 			
 		}
 		#slider-container{
 			min-width: 1000%;
-			position: absolute;
-			left: 0px;
+			position: relative;
+			margin-left: 0px;
 		}
 		#slider-container img{
 			/*display: none;*/
+			position: absolute;
 			float: left;
 		}
 		.clearfix::after {
@@ -41,7 +42,7 @@
 <body>
 	<!-- <div id="silder"> -->
 		<div id="slider-container-wrapper">
-			<div id="slider-container" style="left: 0px;">
+			<div id="slider-container">
 				<img src="1.jpeg" alt="Image 1">
 				<img src="2.jpeg" alt="Image 2">
 				<img src="3.jpeg" alt="Image 3">
@@ -51,6 +52,6 @@
 		</div>	
 	<!-- </div> -->
 	
-	<script type="text/javascript" src="script.js">	</script>
+	<script type="text/javascript" src="scripts.js">	</script>
 </body>
 </html>
