Flappy Bird completed with sprite and images

--- a/ast1/index.html
+++ b/ast1/index.html
@@ -5,7 +5,7 @@
 	<style type="text/css">
 		#slider-container-wrapper{
 			width: 250px;
-			height: 200px;
+			height: 500px;
 			overflow: hidden;
 			position: relative;
 			border: 5px solid green;
@@ -57,9 +57,9 @@
 	<!-- <div id="silder"> -->
 		<div id="slider-container-wrapper">
 			<div id="slider-container">
-				<img src="1.jpeg" alt="Image 1">
-				<img src="2.jpeg" alt="Image 2">
-				<img src="3.jpeg" alt="Image 3">
+				<img src="1.jpg" alt="Image 1">
+				<img src="2.jpg" alt="Image 2">
+				<img src="3.jpg" alt="Image 3">
 			</div>
 			<button id="prev">Prev</button>
 			<button id="next">Next</button>
