--- a/ast3/index.html
+++ b/ast3/index.html
@@ -9,16 +9,35 @@
 			border: 2px solid green;
 			position: relative;
 			overflow: hidden;
+			background: url('background.png');
 		}
 		#scoreBoard{
 			color: black;
-			font-size: 16px;
+			font-size: 36px;
+		    padding-left: 36px;
+		    line-height: 80px;
+		    z-index: 10;
+		}
+		#msgBoard{
+			position: absolute;
+			left: 30%;
+			top: 10%;
+			height: 300px;
+			width: 500px;
+			background-color: gray;
+			text-align: center;
+			padding-top: 10%;
+			z-index: 4;
 		}
 	</style>
 </head>
 <body>
 	<div id="container">
 		<span id="scoreBoard">0</span>
+		<div id="msgBoard">
+			<h1>Welcome To Flappy World</h1>
+			<p>Press Space to Start Game</p>
+		</div>
 	</div>
 
 	<script type="text/javascript" src="script.js"></script>
