--- a/ast3/index.html
+++ b/ast3/index.html
@@ -17,6 +17,7 @@
 		    padding-left: 36px;
 		    line-height: 80px;
 		    z-index: 10;
+		    position: absolute;
 		}
 		#msgBoard{
 			position: absolute;
