--- a/ast4/index.html
+++ b/ast4/index.html
@@ -21,11 +21,25 @@
 		.highlight{
 			color: blue;
 		}
+		#msgBoard{
+			background-color: green;
+			color: white;
+			text-align: center;
+			padding: 30px;
+			width: 500px;
+			margin-left: 20%;
+			margin-top: 10%;
+		}
+
 	</style>
 </head>
 <body>
 	<div id="container">
 		<span id="scoreBoard">0</span>
+		<!-- <div id="msgBoard">
+			<h1>Welcome To Typing Tutor</h1>
+			<p>Press Space To Start Game</p>
+		</div> -->
 	</div>
 	<input type="input" name="">
 	<script type="text/javascript" src="script.js"></script>
